- DeskService.java: optimized filtering for folder and category at same time (at Laurins suggestion)